--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,11 @@ header{
     background-size: contain;
     /* Styles were added here to arrange the content, I used flexbox */
     /* TO DO */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
+
 
 /* For All Headings */
 h1, h2, h3, h4{
@@ -137,6 +141,7 @@ nav ul{
     padding: 0;
     /* Styles were added here to arrange the content, I used flexbox */
     /* TO DO */
+    display: flex;
 }
 
 nav a{
@@ -165,6 +170,8 @@ nav a span{
     position: relative;
     /* Styles were added here to arrange the content, I used top and z-index for this */
     /* TO DO */
+    top: -140px;
+    z-index: 1;
 }
 
 nav a:focus{
@@ -224,17 +231,27 @@ p{
     padding: 96px 32px;
     /* Styles were added here to arrange the content, I used grid */
     /* TO DO */
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 8px 32px;
+
 }
 
 #plants h3, #plants > p{
     /* Styles were added here to arrange the content, these are grid children styles */
     /* TO DO */
+    grid-column: 1/-1;
 }
 
 #plants section{
     /* Styles were added here to arrange the content, I used flexbox */
     /* TO DO */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 8px;
     margin: 32px auto 0;
+
 }
 
 #plants h4{
@@ -244,6 +261,7 @@ p{
 #plants img{
     /* Styles were added here to arrange the content, I used a property for a flexbox child to change the order that the content appears on the page */
     /* TO DO */
+    order: -1;
     width: 100%;
     max-width: 400px;
     height: auto;
@@ -265,12 +283,16 @@ p{
     padding: 64px 32px;
     /* Styles were added here to arrange the content, I used grid */
     /* TO DO */
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 16px 32px;
 }
 
 /* Contact Heading and Paragraph */
 #contact h3, #contact > p{
     /* Styles were added here to arrange the content, these are grid children styles */
     /* TO DO */
+    grid-column: 1/-1;
 }
 
 /* Contact text color */
@@ -357,6 +379,9 @@ th:nth-of-type(even), td:nth-of-type(even){
 #social ul{
     /* Styles were added here to arrange the content, I used grid */
     /* TO DO */
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 16px;
     width: fit-content;
     margin: 16px auto;
     list-style-type: none;
@@ -367,6 +392,7 @@ th:nth-of-type(even), td:nth-of-type(even){
 #social h4{
     /* Styles were added here to arrange the content, these are grid children styles */
     /* TO DO */
+    grid-column: 1/-1;
 }
 
 #social a{
